QS-1563: Add InputSelectImage component

--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -13,6 +13,7 @@ $green-experiences: #7BD47E;
 $green-experiences-translucent: rgba(123, 212, 126, 0.2);
 $red-error: #f42b54;
 
+$overlay-image: rgba(43, 56, 87, 0.6);
 $overlay-top: rgba(43, 56, 87, 0);
 $overlay-bottom: rgba(43, 56, 87, 0.4);
 
