QS-1563: Add LeisureProfileGamesPage

--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -26,6 +26,7 @@ $youtube-red: #cd201f;
 $tumblr-blue: #35465c;
 $linkedin-blue: #0077b5;
 $steam-black: #000000;
+$steam-blue: #367195;
 
 // TODO: Remove these colors;
 $facebook-blue-light: rgba(139,157,195, 0.5);
