QS-1563: Add dynamic selection for AvailabilityEditPage

--- a/src/js/components/ui/Chip/Chip.scss
+++ b/src/js/components/ui/Chip/Chip.scss
@@ -48,6 +48,15 @@
     }
   }
 
+  &.full-width {
+    text-align: left;
+    width: 90%;
+
+    .text {
+      width: 100%;
+    }
+  }
+
   .cancel-icon {
     color: $white-background;
     font-weight: bold;
