QS-1563: Finish AvailabilityEditPage

--- a/src/scss/pages/availability-edit.scss
+++ b/src/scss/pages/availability-edit.scss
@@ -29,5 +29,11 @@ body #root .App .views .view.availability-edit-view {
         }
       }
     }
+
+    .dates-options {
+      .dates-option {
+        margin-bottom: 24px;
+      }
+    }
   }
 }
