QS-1563: Fix RoundedIcon and ProgressBar components

--- a/src/js/components/ui/RoundedIcon/RoundedIcon.scss
+++ b/src/js/components/ui/RoundedIcon/RoundedIcon.scss
@@ -1,11 +1,12 @@
 .rounded-icon {
   background: #6C6F82;
-  border: 5px solid #FFF;
+  border: none;
   border-radius: 50%;
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   color: #fff;
   display: inline-block;
+  margin: 5px;
   position: relative;
   overflow: hidden;
   cursor: pointer;
