--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -3,6 +3,7 @@ $purple-main: #756EE5;
 $purple-main-translucent: rgba(117, 110, 229, 0.2);;
 $purple-secondary: #928BFF;
 $gray-main-text: #2B3857;
+$gray-main-translucent: rgba(43, 56, 87, 0.7);
 $gray-secondary-text: #818FA1;
 $gray-border: #F0F1FA;
 $blue-projects: #63CAFF;
