--- a/src/js/components/OtherUser/CardUser/CardUser.scss
+++ b/src/js/components/OtherUser/CardUser/CardUser.scss
@@ -1,3 +1,5 @@
+@import '../../../../scss/_partials/colors';
+
 .card-user {
   display: inline-block;
   font-weight: 600;
@@ -17,11 +19,29 @@
     padding: 0;
     width: 95%;
 
+    .group {
+      margin-left: 8px;
+      top: 16px;
+      position: absolute;
+
+      .group-name {
+        color: $white-background;
+        display: inline-block;
+        font-weight: bold;
+        line-height: 35px;
+        margin-left: 3px;
+        vertical-align: top;
+      }
+    }
+
     .user-image {
       text-align: center;
       width: 100%;
 
       img {
+        border-radius: 10px 10px 0 0;
+        -moz-border-radius: 10px 10px 0 0;
+        -webkit-border-radius: 10px 10px 0 0;
         width: 100%;
       }
     }
