QS-1563: Replace matching and similarity with compatible and similar and fix styles

--- a/src/js/components/OtherUser/CardUser/CardUser.scss
+++ b/src/js/components/OtherUser/CardUser/CardUser.scss
@@ -65,9 +65,17 @@
 
       .progress-bar-title {
         display: inline-block;
+        font-size: 10px;
         height: 33px;
         line-height: 33px;
         width: 50%;
+
+        @media only screen and (min-width: 320px) {
+          font-size: 12px;
+        }
+        @media only screen and (min-width: 350px) {
+          font-size: inherit;
+        }
       }
       .progress-bar {
         display: inline-block;
