--- a/src/scss/pages/proposals.scss
+++ b/src/scss/pages/proposals.scss
@@ -6,7 +6,7 @@ body #root .App .views .view.proposals-view {
   text-align: center;
 
   .proposals-wrapper {
-    height: 82%;
+    min-height: 100vh;
     margin: 24px auto;
 
     .proposal {
