QS-1563: Fix ChatThreadsPage

--- a/src/js/components/ui/LastMessage/LastMessage.scss
+++ b/src/js/components/ui/LastMessage/LastMessage.scss
@@ -4,6 +4,7 @@
   cursor: pointer;
   min-height: 70px;
   padding: 10px 16px 5px 16px;
+  position: relative;
 
   .photo {
     display: inline-block;
