--- a/src/js/components/TopNavBar/TopNavBar.scss
+++ b/src/js/components/TopNavBar/TopNavBar.scss
@@ -9,8 +9,12 @@
 
   .icon {
     display: inline-block;
-    margin-top: 15px;
-    margin-left: 8px;
+    font-size: 25px;
+    line-height: 50px;
+    margin-top: 0;
+    text-align: center;
+    height: 50px;
+    width: 40px;
   }
   .rounded-icon {
     display: inline-block;
@@ -20,7 +24,7 @@
     vertical-align: text-bottom;
 
     .icon {
-      margin-top: 24px;
+      margin-top: 8px;
     }
   }
 
@@ -52,7 +56,12 @@
   .icon {
     cursor: pointer;
     display: inline-block;
-    margin-top: 15px;
+    font-size: 25px;
+    line-height: 50px;
+    margin-top: 0;
+    text-align: center;
+    height: 50px;
+    width: 40px;
 
     &.second {
       margin-left: 20px;
@@ -72,7 +81,7 @@
     vertical-align: text-bottom;
 
     .icon {
-      margin-top: 24px;
+      margin-top: 8px;
     }
   }
 }
