--- a/src/js/components/OtherUser/CardUser/CardUser.scss
+++ b/src/js/components/OtherUser/CardUser/CardUser.scss
@@ -65,16 +65,16 @@
 
       .progress-bar-title {
         display: inline-block;
-        font-size: 10px;
+        font-size: 8px;
         height: 33px;
         line-height: 33px;
-        width: 50%;
+        width: 45%;
 
         @media only screen and (min-width: 320px) {
-          font-size: 12px;
+          font-size: 10px;
         }
-        @media only screen and (min-width: 350px) {
-          font-size: inherit;
+        @media only screen and (min-width: 370px) {
+          font-size: 12px;
         }
       }
       .progress-bar {
@@ -106,6 +106,19 @@
       }
       .age-city {
         margin: 5px 0;
+      }
+    }
+    .progress-bars {
+      .progress-bar-title {
+        font-size: 10px;
+        width: 50%;
+
+        @media only screen and (min-width: 320px) {
+          font-size: 12px;
+        }
+        @media only screen and (min-width: 350px) {
+          font-size: 14px;
+        }
       }
     }
     .coincidences {
