--- a/src/js/components/ui/TopBar/TopBar.scss
+++ b/src/js/components/ui/TopBar/TopBar.scss
@@ -4,7 +4,7 @@
   background: #fff;
   color: $gray-main-text;
   font-weight: bold;
-  height: 50px;
+  min-height: 50px;
   line-height: 50px;
   margin: auto;
   position: sticky;
