--- a/src/js/components/ui/Frame/Frame.scss
+++ b/src/js/components/ui/Frame/Frame.scss
@@ -1,9 +1,12 @@
+@import '../../../../scss/_partials/colors';
+
 .frame {
   background: #FFF;
   border: 1px solid #E2E3E7;
   border-radius: 10px;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
+  box-shadow: 0 0 5px $gray-border;
   color: #6C6F82;
   display: inline-block;
   font-size: 15px;
