QS-1563: Rename and refactor Select component to SelectMultiple

--- a/src/js/components/ui/SelectMultiple/SelectMultiple.scss
+++ b/src/js/components/ui/SelectMultiple/SelectMultiple.scss
@@ -1,6 +1,6 @@
 @import '../../../../scss/_partials/colors';
 
-.select {
+.select-multiple {
   .select-tag {
     .title {
       font-weight: 600;
