Add InputNumberRange, InputNumber, MultipleChoicesFilter, TagFilter, IntegerRangeFilter and TagFilter and add them to PersonsFilterPage

--- a/src/js/components/RegisterFields/InputTag/InputTag.scss
+++ b/src/js/components/RegisterFields/InputTag/InputTag.scss
@@ -1,5 +1,8 @@
 .input-tag {
 
+  .title {
+    font-weight: 600;
+  }
   .suggested-chip, .selected-chip {
     display: block;
     margin: 0 16px;
