--- a/src/scss/pages/persons-filter.scss
+++ b/src/scss/pages/persons-filter.scss
@@ -7,7 +7,18 @@ body #root .App .views .view.persons-filter-view {
   text-align: left;
 
   .persons-filter-wrapper {
+    margin-bottom: 48px;
     margin-top: 24px;
     padding: 0 8px;
+
+    .filter {
+      margin: 24px 0;
+
+      .remove {
+        position: absolute;
+        right: 48px;
+        margin-top: -6px;
+      }
+    }
   }
 }
