QS-1563: Add new ChoiceAndMultipleChoices component and add it to PersonsFilterPage

--- a/src/js/components/ui/SelectInline/SelectInline.scss
+++ b/src/js/components/ui/SelectInline/SelectInline.scss
@@ -1,5 +1,9 @@
 @import '../../../../scss/_partials/colors';
 
+.title {
+  font-weight: 600;
+  margin-bottom: 16px;
+}
 .select-inline-wrapper {
   border: 1px solid $gray-border;
   border-radius: 18px;
