QS: 1563: Remove min-height of proposals page. Create new BottomNotificationBar translations "en" and "es". Add the BottomNotificationBar component to ProposalsPage. Create BottomNotificationBar class and scss. Create BottomNotificationBar story and initialize it in config. Create BottomNotificationBar tests.

--- a/src/scss/pages/proposals.scss
+++ b/src/scss/pages/proposals.scss
@@ -6,7 +6,7 @@ body #root .App .views .view.proposals-view {
   text-align: center;
 
   .proposals-wrapper {
-    min-height: 100vh;
+    // min-height: 100vh;
     margin: 24px auto;
 
     .proposal {
