QS-1563: Fix all Proposals NavBar back navigation. Add connectToStores to ProposalsProjectAvailabilityPage. Create ProposalsProjectAvailabilityDatesPage with translations. Add new Property theme and color to all AvailabilityEdit dependant components. Create new Infinite Calendar theme and stories. Add get to CreatingProposalStore.

--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -7,6 +7,7 @@ $gray-main-translucent: rgba(43, 56, 87, 0.7);
 $gray-secondary-text: #818FA1;
 $gray-border: #F0F1FA;
 $blue-projects: #63CAFF;
+$blue-projects-secondary: #8ed9ff; // TODO: not a final color.
 $blue-projects-translucent: rgba(99, 202, 255, 0.2);
 $pink-hobbies: #D380D3;
 $pink-hobbies-translucent: rgba(211, 128, 211, 0.2);
