--- a/src/scss/pages/proposals-project-availability-dates.scss
+++ b/src/scss/pages/proposals-project-availability-dates.scss
@@ -6,6 +6,14 @@ body #root .App .views .view.proposals-project-availability-dates-view {
   z-index: 0;
 
   .proposals-project-availability-dates-wrapper {
-
+    h2 {
+      padding: 0 24px;
+    }
   }
+}
+
+
+.Cal__Day__range.Cal__Day__selected.Cal__Day__end .Cal__Day__selection {
+  background-color: $blue-projects-secondary !important;
+  color: $white-background !important;
 }
