QS-1563: Fix FrameCollapsible default color. Add new css rules in ProposalsProjectFeatures. Fix color css in ProposalsProjectIntroduction. Fix Frame component margin. Fix ProposalsProjectAvailabilityDatesPage availability initialize error and added conditional navigation with styles to TopNavBar. Add Logout method to SettingsPage.

--- a/src/scss/pages/proposals-project-features.scss
+++ b/src/scss/pages/proposals-project-features.scss
@@ -15,4 +15,9 @@ body #root .App .views .view.proposals-project-features-view {
 
 
   }
+
+  .warning-container {
+    margin: 2.5%;
+    display: flex;
+  }
 }
