--- a/src/scss/pages/proposals-project-introduction.scss
+++ b/src/scss/pages/proposals-project-introduction.scss
@@ -1,7 +1,7 @@
 @import '../_partials/colors';
 
 body #root .App .views .view.proposals-introduction-view {
-  background: $blue-projects;
+  background: $blue;
   text-align: center;
   overflow: hidden;
 
