QS-1563: Fix some translations. Variables renamed, now name variables match with brain. Add ComponentWillMount on ProposalsPages (WIP). Fix ProposalsProjectFeaturesPage parseThread. Fix LocationInput focus. Fix ChoiceAndMultipleChoicesFilter fatal error. Create new color variables. Add new css to RoundedIcon. Fix ProposalsProjectAvailability CSS and components. Add new components and css rules to ProposalsProjectPreview.

--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -1,3 +1,24 @@
+$purple-one: #928bff;
+$purple-one-light: lighten($purple-one, 20%);
+$purple-two: #615acb;
+$purple-two-light: lighten($purple-two, 20%);
+$green: #7bd47e;
+$green-light: lighten($green, 20%);
+$pink: #d380d3;
+$pink-light: lighten($pink, 20%);
+$blue: #63caff;
+$blue-lighten: lighten($blue, 20%);
+
+$background: #f6f6f6;
+$border: #F0F1FA;
+$text: #2B3857;
+$text-two: #818fa1;
+
+$links: #1f8fe1;
+$red: #f42b54;
+
+
+
 $white-background: #FBFCFD;
 $purple-main: #756EE5;
 $purple-main-translucent: rgba(117, 110, 229, 0.2);;
