--- a/src/js/components/ui/RoundedIcon/RoundedIcon.scss
+++ b/src/js/components/ui/RoundedIcon/RoundedIcon.scss
@@ -6,7 +6,7 @@
   -webkit-border-radius: 50%;
   color: #fff;
   display: inline-block;
-  margin: 5px;
+  //margin: 5px;
   position: relative;
   overflow: hidden;
   cursor: pointer;
@@ -35,12 +35,12 @@
     }
   }
   &.small {
-    height: 25px;
-    width: 25px;
+    height: 32px;
+    width: 32px;
 
     .icon {
-      font-size: 25px;
-      line-height: 25px;
+      font-size: 24px;
+      line-height: 32px;
     }
   }
 }
