--- a/src/scss/pages/proposals-project-availability.scss
+++ b/src/scss/pages/proposals-project-availability.scss
@@ -14,25 +14,59 @@ body #root .App .views .view.proposals-project-availability-view {
       cursor: pointer;
     }
 
-    .steam-icon {
-      display: inline-block;
-      text-align: left;
-      width: 15%;
-    }
     .text-wrapper {
       display: inline-block;
       text-align: left;
       vertical-align: top;
-      width: 75%;
+      width: 88%;
 
       .title {
         font-weight: bold;
-        margin-bottom: 10px;
+        margin-bottom: 8px;
         text-align: left;
+        color: $text;
+      }
+      .small {
+        font-size: 14px;
+      }
+    }
+    .text-participants-wrapper {
+      display: inline-block;
+      text-align: left;
+      vertical-align: top;
+      width: 34%;
+
+      .title {
+        font-weight: bold;
+        text-align: left;
+        color: $text;
       }
       .small {
         font-size: 14px;
       }
     }
   }
+}
+
+.participants-number {
+  display: inline-block;
+  width: 54%;
+  text-align: right;
+  .participants-number-text {
+    display: inline-block;
+    vertical-align: super;
+    font-weight: bold;
+    color: $text;
+    font-size: 24px;
+    width: 22%;
+    text-align: center;
+  }
+}
+
+.rounded-icon-wrapper {
+  text-align: center;
+  display: inline-block;
+  margin-right: 4%;
+  width: 8%;
+  vertical-align: top;
 }
