--- a/src/scss/pages/proposals-project-preview.scss
+++ b/src/scss/pages/proposals-project-preview.scss
@@ -1,18 +1,62 @@
 @import '../_partials/colors';
 
 body #root .App .views .view.proposals-project-preview-view {
-  color: $gray-main-text;
-  // text-align: center;
+  color: $text;
   z-index: 0;
 
   .proposals-project-preview-wrapper {
-    h2, p {
+    h2 {
       padding: 0 24px;
     }
+    h2, p {
+      font-weight: normal;
+    }
+    .category {
+      font-size: 14px;
+      font-weight: bold;
+    }
     .image-wrapper {
+      position: relative;
+      color: white;
       img {
         width: 100%;
       }
+      .bottom-left {
+        position: absolute;
+        bottom: 5px;
+      }
+    }
+
+    .content-wrapper {
+      padding: 0 24px;
+      .information-wrapper {
+        margin-bottom: 24px;
+      }
+    }
+
+    .text-wrapper {
+      display: inline-block;
+      text-align: left;
+      vertical-align: top;
+      width: 88%;
+
+      .title {
+        font-weight: bold;
+        margin-bottom: 8px;
+        text-align: left;
+        color: $text;
+      }
+      .small {
+        font-size: 14px;
+      }
     }
   }
+}
+
+.rounded-icon-wrapper {
+  text-align: center;
+  display: inline-block;
+  margin-right: 4%;
+  width: 8%;
+  vertical-align: top;
 }
