QS-1568: Finish ProposalsProjectPreview Page. Save proposal. Translate it and refactorize all ProposalProject components and page.

--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -10,6 +10,7 @@ $blue: #63caff;
 $blue-lighten: lighten($blue, 20%);
 
 $background: #f6f6f6;
+$background-darken: darken(#f6f6f6, 5%);
 $border: #F0F1FA;
 $text: #2B3857;
 $text-two: #818fa1;
