--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -1,25 +1,3 @@
-$purple-one: #928bff;
-$purple-one-light: lighten($purple-one, 20%);
-$purple-two: #615acb;
-$purple-two-light: lighten($purple-two, 20%);
-$green: #7bd47e;
-$green-light: lighten($green, 20%);
-$pink: #d380d3;
-$pink-light: lighten($pink, 20%);
-$blue: #63caff;
-$blue-lighten: lighten($blue, 20%);
-
-$background: #f6f6f6;
-$background-darken: darken(#f6f6f6, 5%);
-$border: #F0F1FA;
-$text: #2B3857;
-$text-two: #818fa1;
-
-$links: #1f8fe1;
-$red: #f42b54;
-
-
-
 $white-background: #FBFCFD;
 $purple-main: #756EE5;
 $purple-main-translucent: rgba(117, 110, 229, 0.2);;
@@ -94,3 +72,27 @@ $material-deep-orange: #FF5722;
 $material-brown: #795548;
 $material-grey: #9E9E9E;
 $material-blue-grey: #607D8B;
+
+
+
+// Good styles TODO: use it
+
+$purple-one: #928bff;
+$purple-one-light: lighten($purple-one, 20%);
+$purple-two: #615acb;
+$purple-two-light: lighten($purple-two, 20%);
+$green: #7bd47e;
+$green-light: lighten($green, 20%);
+$pink: #D380D3;
+$pink-light: lighten($pink, 20%);
+$blue: #63caff;
+$blue-lighten: lighten($blue, 20%);
+
+$background: #f6f6f6;
+$background-darken: darken(#f6f6f6, 5%);
+$border: #F0F1FA;
+$text: #2B3857;
+$text-two: #818fa1;
+
+$links: #1f8fe1;
+$red: #f42b54;
