--- a/src/scss/pages/proposals/leisure/basic.scss
+++ b/src/scss/pages/proposals/leisure/basic.scss
@@ -1,17 +1,18 @@
-@import '../_partials/colors';
+@import '../../../_partials/colors';
 
-body #root .App .views .view.proposals-project-basic-view {
+body #root .App .views .view.proposals-leisure-basic-view {
   color: $gray-main-text;
   text-align: center;
   z-index: 0;
 
-  .proposals-project-basic-wrapper {
+  .proposals-leisure-basic-wrapper {
     h2 {
       padding: 0 24px;
     }
     .image-wrapper {
       padding: 0 24px;
       img {
+        margin: 16px 0 0 0;
         width: 100%;
       }
     }
