QS-1569: Create PoposalLeisure Finished (8/8)

--- a/src/scss/pages/proposals/project/basic.scss
+++ b/src/scss/pages/proposals/project/basic.scss
@@ -1,4 +1,4 @@
-@import '../_partials/colors';
+@import '../../../_partials/colors';
 
 body #root .App .views .view.proposals-project-basic-view {
   color: $gray-main-text;
