--- a/src/scss/pages/proposals/project/features.scss
+++ b/src/scss/pages/proposals/project/features.scss
@@ -1,4 +1,4 @@
-@import '../_partials/colors';
+@import '../../../_partials/colors';
 
 body #root .App .views .view.proposals-project-features-view {
   color: $gray-main-text;
