--- a/src/scss/pages/proposals/project/introduction.scss
+++ b/src/scss/pages/proposals/project/introduction.scss
@@ -1,4 +1,4 @@
-@import '../_partials/colors';
+@import '../../../_partials/colors';
 
 body #root .App .views .view.proposals-introduction-view {
   background: $blue;
