--- a/src/scss/pages/proposals/project/preview.scss
+++ b/src/scss/pages/proposals/project/preview.scss
@@ -1,4 +1,4 @@
-@import '../_partials/colors';
+@import '../../../_partials/colors';
 
 body #root .App .views .view.proposals-project-preview-view {
   color: $text;
