QS-1571: Add CandidateCard and improve CSS of ProposalCard

--- a/src/js/components/OtherUser/CardUser/CardUser.scss
+++ b/src/js/components/OtherUser/CardUser/CardUser.scss
@@ -50,7 +50,7 @@
       color: white;
       padding: 0 5%;
       margin-top: -55px;
-      .nickname {
+      .username {
         font-size: 20px;
       }
       .age-city {
@@ -108,7 +108,7 @@
     .top-data {
       margin-top: -60px;
 
-      .nickname {
+      .username {
       }
       .age-city {
         margin: 5px 0;
