--- a/src/js/components/ui/ProposalRecommendationList/ProposalRecommendationList.scss
+++ b/src/js/components/ui/ProposalRecommendationList/ProposalRecommendationList.scss
@@ -1,7 +1,7 @@
 @import '../../../../scss/_partials/colors';
 
 .proposalRecommendationList {
-  background: #fff;
+  background: rgba(146, 139, 255, 0.1);
   font-size: 15px;
   padding: 25px;
   overflow-x: hidden;
