--- a/src/js/components/Proposal/CandidateCard/CandidateCard.scss
+++ b/src/js/components/Proposal/CandidateCard/CandidateCard.scss
@@ -1,6 +1,6 @@
 @import '../../../../scss/_partials/colors';
 
-.proposal-card {
+.candidate-card {
   cursor: pointer;
   display: inline-block;
   font-weight: 600;
@@ -21,7 +21,7 @@
     padding: 0;
     width: 95%;
 
-    .proposal-image {
+    .candidate-image {
       height: 100%;
       overflow: hidden;
       position: relative;
@@ -33,30 +33,55 @@
         -webkit-border-radius: 10px 10px 0 0;
         width: 100%;
       }
+
       .top-data {
         bottom: 0;
         color: white;
-        height: 100%;
-        padding: 0 5%;
+        //height: 100%;
+        //padding: 0 5%;
         position: absolute;
         width: 80%;
+        height: 60px;
+        margin-top: 16px;
+        padding: 0 5%;
 
-        h2 {
-          bottom: 0;
-          font-weight: 600;
-          max-height: 80px;
-          overflow: hidden;
-          position: absolute;
+        //h2 {
+        //  bottom: 0;
+        //  font-weight: 600;
+        //  max-height: 80px;
+        //  overflow: hidden;
+        //  position: absolute;
+        //}
+
+        .user-text {
+          display: inline-block;
+          margin-left: 6px;
+          vertical-align: super;
+
+          .username {
+            font-size: 20px;
+          }
+
+          .age-city {
+            color: $gray-secondary-text;
+            font-size: 14px;
+            font-weight: normal;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
         }
       }
 
     }
+
     .type {
       position: absolute;
       right: 16px;
       top: 16px;
       z-index: 1;
     }
+
     .user-data {
       height: 60px;
       margin-top: 16px;
@@ -70,6 +95,7 @@
         .username {
           font-size: 20px;
         }
+
         .age-city {
           color: $gray-secondary-text;
           font-size: 14px;
@@ -80,6 +106,7 @@
         }
       }
     }
+
     .progress-bars {
       margin-top: 16px;
       padding: 0 5%;
@@ -89,7 +116,7 @@
         font-size: 10px;
         height: 33px;
         line-height: 33px;
-        width: 50%;
+        width: 40%;
 
         @media only screen and (min-width: 320px) {
           font-size: 12px;
@@ -98,20 +125,58 @@
           font-size: inherit;
         }
       }
+
       .progress-bar {
         display: inline-block;
-        width: 40%;
+        width: 50%;
       }
     }
+
     .description {
       padding: 16px 5%;
 
-      .resume-title {
+      //.resume-text {
+      //  font-weight: normal;
+      //  margin-top: 16px;
+      //}
+    }
 
+    .horizontal-line {
+      width: 20%;
+      padding-top: 15%;
+      padding-left: 5%;
+
+      hr {
+        border-color: rgba(50, 50, 50, 0.1);
       }
-      .resume-text {
-        font-weight: normal;
-        margin-top: 16px;
+    }
+
+    .proposal {
+      padding: 0 5%;
+      display: flex;
+      flex-wrap: wrap;
+
+      .compatible-proposal-title {
+        width: 100%;
+      }
+
+      .proposal-content {
+        display: flex;
+        align-content: space-around;
+        padding-bottom: 5%;
+
+        img {
+          border-radius: 10px;
+          -moz-border-radius: 10px;
+          -webkit-border-radius: 10px;
+          width: 30%;
+          max-height: 90px;
+        }
+
+        .proposal-description {
+          width: 60%;
+          padding: 0 5%;
+        }
       }
     }
   }
