--- a/src/scss/pages/proposals.scss
+++ b/src/scss/pages/proposals.scss
@@ -4,6 +4,7 @@ body #root .App .views .view.proposals-view {
   background: $white-background;
   color: $gray-main-text;
   text-align: center;
+  overflow-y: hidden;
 
   .proposals-wrapper {
     // min-height: 100vh;
