QS-1566: Finish LocationInput component. (WIP styles of input)

--- a/src/js/components/ui/LocationInput/LocationInput.scss
+++ b/src/js/components/ui/LocationInput/LocationInput.scss
@@ -6,7 +6,13 @@
     font-weight: 600;
   }
   .location-input {
-
+    ul {
+      list-style-type: none;
+      padding: 0;
+      li {
+        margin: 10px 0;
+      }
+    }
 
   }
 }
