QS-1580: Adjust input layout design. Also copied styles for GeoSuggest input.

--- a/src/js/components/ui/InputSlider/InputSlider.scss
+++ b/src/js/components/ui/InputSlider/InputSlider.scss
@@ -1,7 +1,5 @@
 @import '../../../../scss/_partials/colors';
 
-//.input-slider {
-//  background: #fff;
-//  font-size: 15px;
-//  padding: 25px;
-//}
+.input-slider {
+  padding: 0 25px 25px 25px;
+}
