--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -88,6 +88,7 @@ $pink-light: lighten($pink, 20%);
 $blue: #63caff;
 $blue-lighten: lighten($blue, 20%);
 
+$background-white: #FFFFFF;
 $background: #f6f6f6;
 $background-darken: darken(#f6f6f6, 5%);
 $border: #F0F1FA;
