--- a/src/js/components/ui/Input/Input.scss
+++ b/src/js/components/ui/Input/Input.scss
@@ -4,8 +4,8 @@
   padding: 16px;
 
   .input {
-    background: $white-background;
-    border-radius: 32px;
+    background: $background-white;
+    border-radius: 100px;
     color: $gray-main-text;
     height: 60px;
     line-height: 60px;
@@ -19,6 +19,7 @@
     }
 
     input {
+      background: $background-white;
       border: none;
       font-size: 19px;
       height: 58px;
@@ -46,7 +47,7 @@
     padding: 8px;
 
     .input {
-      border: 1px solid $gray-secondary-text;
+      border: 1px solid $border;
       height: 40px;
       line-height: 40px;
 
