--- a/src/js/components/ui/LocationInput/LocationInput.scss
+++ b/src/js/components/ui/LocationInput/LocationInput.scss
@@ -16,3 +16,15 @@
 
   }
 }
+
+input {
+  font-size: 16px;
+  height: 38px;
+  text-align: left;
+  line-height: 38px;
+  width: 85%;
+  background: $background-white;
+  border-radius: 100px;
+  border: 1px solid $border;
+  padding-left: 32px;
+}
