QS-1576: Finish QS-1576

--- a/src/js/components/Availability/AvailabilityEdit/AvailabilityEdit.scss
+++ b/src/js/components/Availability/AvailabilityEdit/AvailabilityEdit.scss
@@ -10,7 +10,7 @@
   }
 
   .daily-options {
-
+    margin-top: 24px;
     .weekday {
       margin: 8px 0;
       width: 100%;
@@ -27,6 +27,7 @@
   }
 
   .dates-options {
+    margin-top: 24px;
     .dates-option {
       margin-bottom: 24px;
     }
