--- a/src/scss/pages/proposals.scss
+++ b/src/scss/pages/proposals.scss
@@ -1,7 +1,7 @@
 @import '../_partials/colors';
 
 body #root .App .views .view.proposals-view {
-  background: $white-background;
+  background-color: $background;
   color: $gray-main-text;
   text-align: center;
   overflow-y: hidden;
