--- a/src/scss/pages/proposals/leisure/features.scss
+++ b/src/scss/pages/proposals/leisure/features.scss
@@ -1,6 +1,7 @@
 @import '../../../_partials/colors';
 
 body #root .App .views .view.proposals-leisure-features-view {
+  background-color: $background-white;
   color: $gray-main-text;
   z-index: 0;
 
