--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -77,6 +77,8 @@ $material-blue-grey: #607D8B;
 
 // Good styles TODO: use it
 
+$white: #FFFFFF;
+
 $purple-one: #928bff;
 $purple-one-light: lighten($purple-one, 20%);
 $purple-two: #615acb;
@@ -89,7 +91,7 @@ $blue: #63caff;
 $blue-lighten: lighten($blue, 20%);
 
 $background-white: #FFFFFF;
-$background: #f6f6f6;
+$background: #F6F6F6;
 $background-darken: darken(#f6f6f6, 5%);
 $border: #F0F1FA;
 $text: #2B3857;
