--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -15,7 +15,7 @@ body {
 		-webkit-text-size-adjust: none; /* prevent webkit from resizing text to fit */
 		-webkit-user-select: none; /* prevent copy paste, to allow, change 'none' to 'text' */
 
-		background: $white-background;
+		// background: $white-background;
 		color: $gray-main-text;
 		font-family: $nekuno-font;
 		margin: 0 auto;
@@ -127,7 +127,7 @@ body {
 				}
 
 				.view {
-					background: $white-background;
+					// background: $white-background;
 					color: #fff;
 					overflow-y: scroll;
 					-webkit-overflow-scrolling: touch;
