--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -41,6 +41,7 @@ body #root .App .views .view.home-view {
 
         h3 {
           font-weight: normal;
+          font-size: 13px;
         }
       }
 
