--- a/src/scss/pages/own-proposals.scss
+++ b/src/scss/pages/own-proposals.scss
@@ -1,7 +1,7 @@
 @import '../_partials/colors';
 
 body #root .App .views .view.own-proposals-view {
-  background: $white-background;
+  background-color: $background;
   color: $gray-main-text;
   text-align: left;
 
