--- a/src/scss/pages/persons-all.scss
+++ b/src/scss/pages/persons-all.scss
@@ -1,7 +1,7 @@
 @import '../_partials/colors';
 
 body #root .App .views .view.persons-all-view {
-  background: $white-background;
+  background-color: $background;
   color: $gray-main-text;
   height: 100%;
   overflow: hidden;
