--- a/src/scss/pages/persons-filter.scss
+++ b/src/scss/pages/persons-filter.scss
@@ -1,7 +1,7 @@
 @import '../_partials/colors';
 
 body #root .App .views .view.persons-filter-view {
-  background: $white-background;
+  background-color: $background;
   color: $gray-main-text;
   position: relative;
   text-align: left;
