--- a/src/scss/pages/professional-profile-skills.scss
+++ b/src/scss/pages/professional-profile-skills.scss
@@ -1,6 +1,7 @@
 @import '../_partials/colors';
 
 body #root .App .views .view.professional-profile-skills-view {
+  background-color: $background-white;
   color: $gray-main-text;
   text-align: center;
   z-index: 0;
