--- a/src/scss/pages/professional-profile.scss
+++ b/src/scss/pages/professional-profile.scss
@@ -24,6 +24,23 @@ body #root .App .views .view.professional-profile-view {
 
     .resume {
       margin-bottom: 32px;
+      font-size: 13px;
+    }
+
+    .skip-wrapper-center {
+      .skip-text {
+        border: 1px solid #fff;
+        padding: 20px 60px;
+        border-radius: 30px;
+      }
+      font-size: 16px;
+      cursor: pointer;
+      font-weight: bold;
+      z-index: 111;
+      position: absolute;
+      width: 100%;
+      bottom: 80px;
+      text-align: center;
     }
 
     .skip-wrapper {
