--- a/src/scss/pages/proposals/leisure/availability.scss
+++ b/src/scss/pages/proposals/leisure/availability.scss
@@ -1,6 +1,7 @@
 @import '../../../_partials/colors';
 
 body #root .App .views .view.proposals-leisure-availability-view {
+  background-color: $background-white;
   color: $gray-main-text;
   text-align: center;
   z-index: 0;
@@ -12,6 +13,13 @@ body #root .App .views .view.proposals-leisure-availability-view {
 
     .proposals-leisure-availability-frame-wrapper {
       cursor: pointer;
+      .rounded-icon-wrapper {
+        text-align: center;
+        display: inline-block;
+        margin-right: 4%;
+        width: 8%;
+        vertical-align: top;
+      }
     }
 
     .text-wrapper {
@@ -45,28 +53,19 @@ body #root .App .views .view.proposals-leisure-availability-view {
         font-size: 14px;
       }
     }
+    .participants-number {
+      display: inline-block;
+      width: 54%;
+      text-align: right;
+      .participants-number-text {
+        display: inline-block;
+        vertical-align: super;
+        font-weight: bold;
+        color: $text;
+        font-size: 24px;
+        width: 22%;
+        text-align: center;
+      }
+    }
   }
-}
-
-.participants-number {
-  display: inline-block;
-  width: 54%;
-  text-align: right;
-  .participants-number-text {
-    display: inline-block;
-    vertical-align: super;
-    font-weight: bold;
-    color: $text;
-    font-size: 24px;
-    width: 22%;
-    text-align: center;
-  }
-}
-
-.rounded-icon-wrapper {
-  text-align: center;
-  display: inline-block;
-  margin-right: 4%;
-  width: 8%;
-  vertical-align: top;
 }
