--- a/src/scss/pages/proposals/leisure/introduction.scss
+++ b/src/scss/pages/proposals/leisure/introduction.scss
@@ -24,6 +24,34 @@ body #root .App .views .view.proposals-leisure-introduction-view {
 
     .resume {
       margin-bottom: 32px;
+      font-size: 13px;
+    }
+
+    .skip-wrapper-center {
+      .skip-text {
+        border: 1px solid #fff;
+        padding: 20px 60px;
+        border-radius: 30px;
+      }
+      font-size: 16px;
+      cursor: pointer;
+      font-weight: bold;
+      z-index: 111;
+      position: absolute;
+      width: 100%;
+      bottom: 80px;
+      text-align: center;
+    }
+
+    .skip-wrapper {
+      cursor: pointer;
+      font-weight: bold;
+      text-align: right;
+      z-index: 111;
+      position: absolute;
+      width: 100%;
+      bottom: 24px;
+      right: 24px;
     }
   }
 }
