--- a/src/scss/pages/proposals/leisure/availability-dates.scss
+++ b/src/scss/pages/proposals/leisure/availability-dates.scss
@@ -9,11 +9,12 @@ body #root .App .views .view.proposals-leisure-availability-dates-view {
     h2 {
       padding: 0 24px;
     }
+
+    .Cal__Day__range.Cal__Day__selected.Cal__Day__end .Cal__Day__selection {
+      background-color: $calendar-black !important;
+      color: $white-background !important;
+    }
   }
 }
 
 
-.Cal__Day__range.Cal__Day__selected.Cal__Day__end .Cal__Day__selection {
-  background-color: $pink-light !important;
-  color: $white-background !important;
-}
