--- a/src/js/components/Proposal/CandidateCard/CandidateCard.scss
+++ b/src/js/components/Proposal/CandidateCard/CandidateCard.scss
@@ -31,7 +31,8 @@
         border-radius: 10px 10px 0 0;
         -moz-border-radius: 10px 10px 0 0;
         -webkit-border-radius: 10px 10px 0 0;
-        width: 100%;
+        width: 360px;
+        height: 180px;
       }
 
       .top-data {
