--- a/src/js/components/Proposal/OwnProposalCard/OwnProposalCard.scss
+++ b/src/js/components/Proposal/OwnProposalCard/OwnProposalCard.scss
@@ -25,7 +25,7 @@
       border-radius: 10px 10px 0 0;
       -moz-border-radius: 10px 10px 0 0;
       -webkit-border-radius: 10px 10px 0 0;
-      height: 100px;
+      height: 130px;
       overflow: hidden;
       text-align: center;
       width: 100%;
@@ -40,7 +40,7 @@
     }
     .top-data {
       color: white;
-      height: 100px;
+      height: 130px;
       padding: 0 5%;
       position: absolute;
       width: 80%;
@@ -53,14 +53,13 @@
         position: absolute;
       }
     }
-    .resume {
-      padding: 5px 5%;
-      height: 75px;
-      overflow: hidden;
-
-      .resume-text {
+    .description {
+      padding: 16px;
+      .description-text {
         font-weight: normal;
-        margin-top: 16px;
+        height: 66px;
+        overflow: hidden;
+        // margin-top: 16px;
       }
     }
     .type {
