--- a/src/scss/pages/persons.scss
+++ b/src/scss/pages/persons.scss
@@ -8,6 +8,7 @@ body #root .App .views .view.persons-view {
   .persons-wrapper {
     margin-top: 24px;
     padding: 0 8px;
+    height: calc(100% - 127px);
 
     h1 {
       display: inline-block;
@@ -30,6 +31,12 @@ body #root .App .views .view.persons-view {
     .groups-persons-title {
       font-weight: 600;
       margin: 32px 12px 16px;
+    }
+
+    .loading {
+      display: flex;
+      justify-content: space-around;
+      align-items: flex-start;
     }
   }
 }
