QS-1584: Create OtherUserBottomNavBar component, OwnProposalCard component, fix SelectCollapsible and create ProposalsPage. WIP

--- a/src/js/components/ui/SelectCollapsible/SelectCollapsible.scss
+++ b/src/js/components/ui/SelectCollapsible/SelectCollapsible.scss
@@ -15,14 +15,16 @@
     font-weight: bold;
   }
   .collapsible {
-    background: $white-background;
+    background: $background-white;
     padding: 0 5%;
     text-align: left;
     position: absolute;
     width: 90%;
+    z-index: 999;
 
     .option {
       color: $gray-secondary-text;
+      margin: 8px 0;
 
       &.option-selected {
         cursor: default;
