--- a/src/js/components/ui/SliderPhotos/SliderPhotos.scss
+++ b/src/js/components/ui/SliderPhotos/SliderPhotos.scss
@@ -1,41 +1,62 @@
 @import '../../../../scss/_partials/colors';
 
-.swiper-slide {
-  height: 100%;
-  text-align: center;
+.swiper-wrapper{
+  //width: 666px;
 
-  .photo {
-    margin-top: 24px;
-    text-align: center;
-    img {
-      margin: auto;
-      width: 75%;
+  .swiper-slide {
+    //height: 100%;
+    //text-align: center;
+    display: inline-block;
+
+    .photo {
+      text-align: center;
+
+      img {
+        margin: auto;
+        width: 100%;
+        max-height: 300px;
+      }
     }
   }
-}
 
-.slick-dots {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  text-align: center;
+  >div {
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    overflow: hidden;
 
-  li {
-    display: inline-block;
-    margin: 0;
-
-    .dot {
-      background-color: #fff;
-      border: 8px solid rgba(255, 255, 255, 0);
-      background-clip: padding-box;
-      border-radius: 50%;
-      display: inline-block;
-      height: 4px;
-      width: 4px;
+    >div{
+      position: relative;
+      top: 0;
+      left: 0;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
     }
-    &.slick-active {
+  }
+
+  .slick-dots {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+
+    li {
+      display: inline-block;
+      margin: 0;
+
       .dot {
-        border: 8px solid rgba(255, 255, 255, 0.2);
+        background-color: #fff;
+        border: 8px solid rgba(255, 255, 255, 0);
+        background-clip: padding-box;
+        border-radius: 50%;
+        display: inline-block;
+        height: 4px;
+        width: 4px;
+      }
+      &.slick-active {
+        .dot {
+          border: 8px solid rgba(255, 255, 255, 0.2);
+        }
       }
     }
   }
