--- a/src/js/components/ui/MatchingBars/MatchingBars.scss
+++ b/src/js/components/ui/MatchingBars/MatchingBars.scss
@@ -9,7 +9,8 @@
     font-size: 8px;
     height: 33px;
     line-height: 33px;
-    width: 45%;
+    width: 50%;
+    text-align: left;
 
     @media only screen and (min-width: 320px) {
       font-size: 10px;
