QS-1583: About me positioning and css fixes

--- a/src/js/components/ui/MatchingBars/MatchingBars.scss
+++ b/src/js/components/ui/MatchingBars/MatchingBars.scss
@@ -11,6 +11,7 @@
     line-height: 33px;
     width: 50%;
     text-align: left;
+    color: black;
 
     @media only screen and (min-width: 320px) {
       font-size: 10px;
@@ -37,12 +38,13 @@
     line-height: 33px;
     width: 100%;
     margin-bottom: -10px;
+    color: black;
 
     @media only screen and (min-width: 320px) {
       font-size: 10px;
     }
     @media only screen and (min-width: 370px) {
-      font-size: 12px;
+      font-size: 14px;
     }
   }
 
