--- a/src/js/components/profile/NaturalCategory/NaturalCategory.scss
+++ b/src/js/components/profile/NaturalCategory/NaturalCategory.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   padding: 5%;
+  width: 100%;
 
   .icon {
     width: 20%;
@@ -13,5 +14,6 @@
   .text {
     width: 80%;
     text-align: left;
+    color: black;
   }
 }
