--- a/src/js/pages/OtherUser/AboutMePage.scss
+++ b/src/js/pages/OtherUser/AboutMePage.scss
@@ -18,4 +18,16 @@
 
 .loading {
   margin-top: 100px;
+  text-align: center;
+}
+
+.matching-bars-wrapper {
+  padding-left: 10%;
+}
+
+.navbar-wrapper {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  z-index: 9001;
 }
