--- a/src/js/components/MessagesToolBar/MessagesToolBar.scss
+++ b/src/js/components/MessagesToolBar/MessagesToolBar.scss
@@ -11,8 +11,8 @@
   transition-duration: 0ms;
   background: #fff;
 
-  left: 0;
-  bottom: 0;
+  //left: 0;
+  //bottom: 0;
 
   height: 60px;
   width: 100%;
@@ -24,13 +24,13 @@
   backface-visibility: hidden;
 
   // position: relative;
-  position: absolute;
+  //position: absolute;
 
 
   .toolbar-inner {
-    position: absolute;
-    left: 0;
-    top: 0;
+    //position: absolute;
+    //left: 0;
+    //top: 0;
     width: 100%;
     height: 100%;
     //padding: 5px 8px;
