--- a/src/js/components/ui/CardContent/CardContent.scss
+++ b/src/js/components/ui/CardContent/CardContent.scss
@@ -35,3 +35,17 @@
     margin-top: 10px;
   }
 }
+
+.card-title {
+  font-size: 16px;
+  color: rgb(43, 56, 87);
+
+  a {
+    color: rgb(43, 56, 87);
+  }
+}
+
+.card-subtitle {
+  font-size: 13px;
+  color: rgb(129, 143, 161)
+}
