Update icomoon font icons and use new icons at BottomNavBar

--- a/src/js/components/BottomNavBar/BottomNavBar.scss
+++ b/src/js/components/BottomNavBar/BottomNavBar.scss
@@ -93,6 +93,11 @@
 
       .add-proposal {
 
+        .icon {
+          font-size: 50px;
+          cursor: pointer;
+        }
+
         .icon-text {
           font-size: 10px;
           font-weight: 600;
