QS-1587: SelectCollapsibleInterest to own interests

--- a/src/js/components/interests/CardContentList.scss
+++ b/src/js/components/interests/CardContentList.scss
@@ -1,6 +1,7 @@
 @import '../../../scss/_partials/colors';
 
-.card-content-list {
-  margin-top: 100px;
-  //height: calc(100% - 150px);
+.loading {
+  width: 100%;
+  text-align: center;
+  margin-top: 50px;
 }
