--- a/src/js/components/ui/CardContent/CardContent.scss
+++ b/src/js/components/ui/CardContent/CardContent.scss
@@ -18,10 +18,6 @@
   justify-content: space-between;
 
   .content-image-wrapper {
-    //height: 100%;
-    //overflow: hidden;
-    //position: relative;
-    //width: 100%;
 
     img {
       border-radius: 10px 10px 0 0;
@@ -32,11 +28,38 @@
     }
   }
 
+  .content-image-full-wrapper {
+
+    height: 100%;
+    width: 100%;
+
+    div {
+      height: 100%;
+      width: 100%;
+    }
+
+    img {
+      border-radius: 10px 10px 0 0;
+      -moz-border-radius: 10px 10px 0 0;
+      -webkit-border-radius: 10px 10px 0 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
   .footer {
     width: 40px;
     align-self: flex-end;
     margin-right: 8px;
     margin-bottom: 8px;
+  }
+
+  .footer-image {
+    width: 40px;
+    align-self: flex-end;
+    margin-right: 8px;
+    margin-bottom: 8px;
+    margin-top: -50px;
   }
 }
 
